ใส่ animation ปังอยู่

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: 'Koulen', 'IBM Sans Thai', sans-serif;
+  background-color: #000000;
 }
 
 /* ฟอนต์ Koulen สำหรับภาษาอังกฤษ */
@@ -66,4 +67,114 @@ body {
 
 .tag-tab {
   background-color: #37302F;
+}
+.center {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  justify-items: center;
+  font-size: 50px;
+  transform: translate(-50% , -50%);
+}
+
+.tag-popup {
+  position: fixed;
+  top: 100vh;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  transition: top 0ms ease-in-out 300ms;
+}
+
+.tag-overlay {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 100ms ease-in-out 200ms;
+}
+
+.tag-popup-content {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  justify-items: center;
+  transform: translate(-50% , -50%) scale(1.15);
+  width: 95%;
+  max-width: 500px;
+  background: #caccda;
+  padding: 25px;
+  border-radius: 20px;
+  opacity: 0;
+  box-shadow: 0px 2px 2px 5px rgba(0, 0, 0, 0.05);
+  transition: all 300ms ease-in-out;
+}
+
+.tag-close {
+  position: absolute;
+  right: 25px;
+  top: 0px;
+  font-size: 35px;
+}
+
+.tag-popup.active {
+  top: 0px;
+  transition: top 0ms ease-in-out 0ms;
+}
+
+.tag-overlay.active {
+  opacity: 1;
+  transition: all 300ms ease-in-out;
+}
+
+.tag-popup-content.active {
+  transform: translate(-50%,-50%) scale(1);
+  opacity: 1;
+}
+
+.transition-up {
+  transition: ;
+}
+
+
+/*animation*/
+
+.container {
+  display: flex;
+  justify-content: center; /* จัดให้เลย์เอาท์อยู่ตรงกลางของหน้าจอ */
+  align-items: center; /* จัดให้เลย์เอาท์อยู่ตรงกลางของหน้าจอ */
+  height: 100vh; /* ทำให้คอนเทนเนอร์เต็มความสูงของหน้าจอ */
+  overflow: hidden; /* ป้องกันการเลื่อนเนื้อหาเกินขอบของหน้าจอ */
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(10%);
+  }
+}
+
+.moving-image {
+  position: fixed;
+  top: 50%;
+  left: 45%;
+  transform: translate(-50%, -50%);
+  animation: slideIn 1000ms ease forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 1000ms ease-in;
 }
