--- a/app/globals.css
+++ b/app/globals.css
@@ -77,6 +77,22 @@ body {
   transform: translate(-50% , -50%);
 }
 
+.line {
+  width: 40%; /* กำหนดความกว้างเต็มหน้าจอ */
+  border: none; /* ลบเส้นเส้นแบบพื้นฐาน */
+  border-top: 2px solid #000000; /* สร้างเส้นด้วยสีเทาเข้ม */
+}
+
+.lineup {
+  width: 40%; /* กำหนดความกว้างเต็มหน้าจอ */
+  border: none; /* ลบเส้นเส้นแบบพื้นฐาน */
+  border-top: 2px solid #000000; /* สร้างเส้นด้วยสีเทาเข้ม */
+  transform: rotate(90deg);
+}
+
+
+
+
 .tag-popup {
   position: fixed;
   top: 100vh;
@@ -85,6 +101,16 @@ body {
   height: 100%;
   transition: top 0ms ease-in-out 300ms;
 }
+
+.tag-overlayup {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+}
+
 
 .tag-overlay {
   top: 0px;
